--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
    
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" 
+    media="screen and (max-width:768px)">
     <title>Hotel BT | About</title>
 </head>
 <body>
