--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="description" content="Welcome to the most extraordinary
     hotel in Boston Massachusetts">   
     <meta name="keywords" content="hotel,boston hotel,new england hotel">
-    <script src="https://kit.fontawesome.com/0a5d6d6f5b.js" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/0a5d6d6f5b.js" 
+    crossorigin="anonymous">
 
     </script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" 
+    media="screen and (max-width:768px)">
     <title>Hotel BT | Welcome</title>
 </head>
 <body>
