--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
 
     </script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" 
+    media="screen and (max-width:768px)">
     <title>Hotel BT | Contact</title>
 </head>
 <body>
